--- a/.github/workflows/lint-check-types.yml
+++ b/.github/workflows/lint-check-types.yml
@@ -7,11 +7,20 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 45
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 'latest'
+
+      - uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
-      - run: yarn --frozen-lockfile
-      - run: yarn eslint . --max-warnings 0
-      - run: yarn tsc
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - run: pnpm eslint . --max-warnings 0
+
+      - run: pnpm tsc
