--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@jest/types": "29.6.3",
     "@types/jest": "^27.5.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
