--- a/.github/workflows/detox-ios.yml
+++ b/.github/workflows/detox-ios.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Prepare files for xcodebuild command
         run: pnpm expo prebuild --platform ios
 
+      - name: Switch to CommonJS for Detox config
+        # Switch "type": "module" to "type": "commonjs" in package.json
+        run: |
+          sed -i'' -e $'s/"type": "module"/"type": "commonjs"/g' package.json
+
       - name: Build iOS app locally with xcodebuild
         run: pnpm detox build --configuration ios
 
