--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
   "dependencies": {
     "@config-plugins/detox": "6.0.0",
     "@expo/xcpretty": "4.3.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.1.9",
     "@react-navigation/native-stack": "6.9.17",
     "@types/react": "~18.0.27",
-    "expo": "^48.0.0",
-    "expo-constants": "~14.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-splash-screen": "~0.18.2",
+    "expo": "49.0.22",
+    "expo-constants": "~15.4.5",
+    "expo-image-picker": "~14.7.1",
+    "expo-splash-screen": "~0.26.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.11"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
