--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -58,6 +58,11 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching"
 
+      - name: Switch to CommonJS for Metro config
+        run: |
+          # Switch "type": "module" to "type": "commonjs" in package.json
+          sed -i'' -e $'s/"type": "module"/"type": "commonjs"/g' package.json
+
       - name: Start emulator and run Expo dev server
         uses: reactivecircus/android-emulator-runner@v2
         timeout-minutes: 20
