--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -84,11 +84,13 @@ jobs:
           target: aosp_atd
           api-level: 30
           arch: x86
+          ram-size: 4096M
           channel: canary
           profile: pixel
           avd-name: Pixel_3a_API_30_AOSP
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          emulator-boot-timeout: 12000
           disable-animations: false
           script: echo "Generated AVD snapshot for caching"
 
@@ -98,9 +100,14 @@ jobs:
           target: aosp_atd
           api-level: 30
           arch: x86
+          ram-size: 4096M
           channel: canary
           profile: pixel
           avd-name: Pixel_3a_API_30_AOSP
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          emulator-boot-timeout: 12000
+          disable-animations: true
           script: pnpm detox test --configuration android
 
       - name: Store Detox artifacts on test failure
