Upgrade ESLint config, switch to pnpm and ESM (#184)

--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -11,21 +11,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 'latest'
+
+      - uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
+          cache: 'pnpm'
 
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1.8.15
+      - name: Install dependencies
+        run: pnpm install
 
       # Sharp CLI enables faster image generation during prebuild
       # https://github.com/expo/expo-cli/issues/2676
       - name: Install Sharp CLI for faster image generation during prebuild
-        run: yarn global add sharp-cli
+        run: npm install --global sharp-cli
 
       - name: Prepare files for gradlew command
-        run: yarn expo prebuild --platform android
+        run: pnpm expo prebuild --platform android
 
       # Use Kotlin version 1.6.0 instead of 1.4.21,
       # which is normally specified in android/build.gradle
@@ -47,10 +51,15 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17'
+
+      - name: Switch to CommonJS for Detox config
+        run: |
+          # Switch "type": "module" to "type": "commonjs" in package.json
+          sed -i'' -e $'s/"type": "module"/"type": "commonjs"/g' package.json
 
       - name: Build Android app locally with gradlew
-        run: yarn detox build --configuration android
+        run: pnpm detox build --configuration android
 
       - name: Cache AVD snapshot
         uses: actions/cache@v3
@@ -75,11 +84,13 @@ jobs:
           target: aosp_atd
           api-level: 30
           arch: x86
+          ram-size: 4096M
           channel: canary
           profile: pixel
           avd-name: Pixel_3a_API_30_AOSP
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          emulator-boot-timeout: 12000
           disable-animations: false
           script: echo "Generated AVD snapshot for caching"
 
@@ -89,10 +100,15 @@ jobs:
           target: aosp_atd
           api-level: 30
           arch: x86
+          ram-size: 4096M
           channel: canary
           profile: pixel
           avd-name: Pixel_3a_API_30_AOSP
-          script: yarn detox test --configuration android
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          emulator-boot-timeout: 12000
+          disable-animations: true
+          script: pnpm detox test --configuration android
 
       - name: Store Detox artifacts on test failure
         uses: actions/upload-artifact@v3
