--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -20,16 +20,20 @@ jobs:
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 'latest'
+
+      - uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Install Expo CLI
         run: npm install --global expo-cli
-
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1
 
       - name: Save existing Jest version to restore later
         id: check-jest-version
@@ -47,10 +51,7 @@ jobs:
       # Jest is managed by Expo SDK version, but we
       # want to manage the version to keep tests stable
       - name: Restore versions to some managed Expo SDK packages which we manage
-        run: yarn add jest@${{ steps.check-jest-version.outputs.JEST_VERSION }} --dev --exact
-
-      - name: Deduplicate packages in yarn.lock
-        run: npx yarn-deduplicate yarn.lock
+        run: pnpm add jest@${{ steps.check-jest-version.outputs.JEST_VERSION }} --save-dev --save-exact
 
       - name: Commit and create PR
         uses: peter-evans/create-pull-request@v4
