--- a/package.json
+++ b/package.json
@@ -2,76 +2,48 @@
   "name": "hotline-bling-codealong",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
     "android": "expo start --android",
+    "eject": "expo eject",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "expo start",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@config-plugins/detox": "6.0.0",
     "@expo/xcpretty": "4.3.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.1.9",
     "@react-navigation/native-stack": "6.9.17",
-    "@types/react": "~18.0.27",
-    "expo": "^48.0.0",
-    "expo-constants": "~14.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "49.0.22",
+    "expo-constants": "~14.4.2",
+    "expo-image-picker": "~14.3.2",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.11"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/eslint-parser": "7.19.1",
-    "@next/eslint-plugin-next": "13.0.2",
-    "@types/eslint": "8.4.10",
+    "@jest/types": "29.6.3",
     "@types/jest": "^27.5.1",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/react": "~18.2.48",
     "@types/react-dom": "~18.0.10",
-    "@typescript-eslint/eslint-plugin": "5.42.1",
-    "@typescript-eslint/parser": "5.42.1",
-    "@upleveled/eslint-config-upleveled": "^3.3.9",
-    "@upleveled/eslint-plugin-upleveled": "2.1.6",
     "detox": "20.17.0",
     "eslint": "8.27.0",
-    "eslint-config-react-app": "7.0.1",
-    "eslint-import-resolver-typescript": "3.5.2",
-    "eslint-plugin-flowtype": "8.0.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.1.5",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-jsx-expressions": "1.3.1",
-    "eslint-plugin-react": "7.31.10",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-security": "2.1.0",
-    "eslint-plugin-sonarjs": "0.16.0",
-    "eslint-plugin-testing-library": "5.9.1",
-    "eslint-plugin-unicorn": "44.0.2",
+    "eslint-config-upleveled": "7.5.0",
     "jest": "29.7.0",
     "ts-jest": "^28.0.2",
-    "typescript": "^4.9.4"
-  },
-  "resolutions": {
-    "@typescript-eslint/eslint-plugin": "5.42.1",
-    "@typescript-eslint/parser": "5.42.1",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.1.5",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.10",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "@typescript-eslint/utils": "5.42.1"
+    "typescript": "^5.3.3"
   }
 }
