Switch expo upgrade to pnpm update
Ref: https://github.com/expo/expo/issues/22747
Ref: https://blog.expo.dev/expo-sdk-48-ccb8302e231#b801

--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -40,7 +40,7 @@ jobs:
         run: echo JEST_VERSION=$(yq '.devDependencies.jest' package.json) >> $GITHUB_OUTPUT
 
       - name: Upgrade packages to latest version supported by Expo SDK
-        run: npx expo upgrade
+        run: pnpm update expo --latest
 
       - name: Fix any incorrect dependency versions
         run: npx expo install --fix
