--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
     name: Expo Dev Server Tests
-    runs-on: macos-latest
+    runs-on: macos-14
     timeout-minutes: 45
     steps:
       - name: Checkout
