--- a/.github/workflows/detox-ios.yml
+++ b/.github/workflows/detox-ios.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           brew tap wix/brew
           brew install applesimutils
+          applesimutils --list
 
       - name: Run tests
         run: pnpm detox test --configuration ios
