--- a/.github/workflows/detox-ios.yml
+++ b/.github/workflows/detox-ios.yml
@@ -40,7 +40,7 @@ jobs:
       # https://github.com/facebook/react-native/issues/42698
       # https://github.com/expo/expo/issues/26828
       # https://github.com/CocoaPods/CocoaPods/issues/12226
-      - name: Change cocoapods version
+      - name: Upgrade CocoaPods to version 1.15.2
         run: |
           gem uninstall cocoapods -v 1.15.0 --ignore-dependencies
           gem install cocoapods -v 1.15.2
