Enable GitHub Actions Renovate PRs

--- a/renovate.json5
+++ b/renovate.json5
@@ -26,5 +26,10 @@
       enabled: true,
       automerge: true,
     },
+    {
+      matchManagers: ['github-actions'],
+      enabled: true,
+      automerge: true,
+    },
   ],
 }
