--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "eslint-config-upleveled": "7.8.1",
     "jest": "29.7.0",
     "ts-jest": "^29.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   }
 }
