--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint": "8.57.0",
     "eslint-config-upleveled": "7.8.1",
     "jest": "29.7.0",
-    "ts-jest": "^29.0.0",
+    "ts-jest": "29.0.0",
     "typescript": "5.3.3"
   }
 }
