--- a/renovate.json5
+++ b/renovate.json5
@@ -22,6 +22,7 @@
         // we want the latest version to keep tests stable
         'jest',
         'ts-jest',
+        'typescript',
       ],
       enabled: true,
       automerge: true,
