--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   build:
     name: Detox Integration Tests - Android
+    # Edit to block endless Renovate rebasing
     runs-on: macos-14
     timeout-minutes: 45
     steps:
