--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
     name: Detox Integration Tests - Android
-    runs-on: macos-15
+    runs-on: macos-15-intel
     timeout-minutes: 45
     steps:
       - name: Checkout
